add example network

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 !images/*
 
 # The example data
-!test/network_inputs/*
-!test/demand_inputs/*
+!projects/test/network_inputs/*
+!projects/test/demand_inputs/*
 
 # Ignore
 *.ipynb_checkpoints*
